--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -34,12 +34,7 @@ jobs:
                           uses: actions/setup-python@v2
                           with:
                                   python-version: 3.6
-                                  run: |
-                                          # Add current directory to the python path
-                                          echo $PYTHONPATH
-                                          
-
-                          
+          
                         - name: Install
                           run: |                  
                                   # Use xvfb to run programs requiring a GUI (e.g. STM32CubeMX code generation)
@@ -52,14 +47,12 @@ jobs:
                                   pip install pipenv
                                   git lfs pull
                                   pipenv install     
-                                  
-                        - name: Python Path
-                          shell: |
-                                  export DISPLAY=:99.0
-                                                                    
+                                                                                                      
                         - name: Script
                           run: |                                                                                     
-                                  #export DISPLAY=:99.0       
+                                  export DISPLAY=:99.0 
+                                  
+                                  export PYTHONPATH=$PYTHONPATH:$PWD
 
                                   export PATH=${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$PATH && ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}} 
                                   
