--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -23,11 +23,6 @@ jobs:
                         CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
         
                 steps:                            
-                        - name: Add Variables
-                          run: |
-                                  # Set the Python path to the current directory
-                                  export PYTHONPATH=$PYTHONPATH:$PWD
-                             
                         - name: Install Addons
                           run: |               
                                   sudo apt-get update
@@ -55,12 +50,12 @@ jobs:
                                                                                                       
                         - name: Script
                           run: |                                                                                     
-                                  DISPLAY=:99.0 
+                                  export DISPLAY=:99.0 
                                   
                                   # Set the Python path to the current directory
-                                  # export PYTHONPATH=$PYTHONPATH:$PWD
+                                  export PYTHONPATH=$PYTHONPATH:$PWD
 
-                                  PATH=${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$PATH && ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}} 
+                                  export PATH=${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$PATH && ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}} 
                                   
                                   ./scripts/travis_ci/print_bin_versions.sh
                                   
