--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -28,6 +28,8 @@ jobs:
                                   sudo apt-get update
                                   sudo dpkg --add-architecture i386
                                   sudo apt-get install libncurses5 libbz2-1.0 libz1 valgrind
+                                  
+                                  export DAB=$DAB:$PWD
                                                                                                 
                         - uses: actions/checkout@v2
                         - name: Install-Python-Packages
@@ -60,6 +62,8 @@ jobs:
                                   ./scripts/travis_ci/print_bin_versions.sh
                                   
                                   ./scripts/travis_ci/travis_script.sh ${{env.CUBE_INSTALL_DIR}}/STM32CubeMX
+                                  
+                                  export
                           env: 
                                 ${{matrix.env}} : "true"
                
