--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -34,7 +34,9 @@ jobs:
                           uses: actions/setup-python@v2
                           with:
                                   python-version: 3.6
-          
+                                  run: |
+                                        echo "export PYTHONPATH=$PYTHONPATH:$PWD" > ~/.bashrc
+
                         - name: Install
                           run: |                  
                                   # Use xvfb to run programs requiring a GUI (e.g. STM32CubeMX code generation)
@@ -42,6 +44,7 @@ jobs:
                                   sudo apt-get install systemd              
                                   sudo cp ./scripts/environment_setup/xvfb.service /etc/systemd/system/xvfb.service
                                   sudo systemctl start xvfb
+                                  echo "export DISPLAY=99.0" > ~/.bashrc
                                                
                                   ./scripts/travis_ci/pull_git_submodules.sh
                                   pip install pipenv
@@ -49,11 +52,14 @@ jobs:
                                   pipenv install     
                                                                                                       
                         - name: Script
-                          run: |                                                                                     
-                                  export DISPLAY=:99.0 
+                          run: |     
+                                  # Import the DISPLAY variable
+                                  source ~/.bashrc
+                                                                         
+                                  #export DISPLAY=:99.0 
                                   
                                   # Set the Python path to the current directory
-                                  export PYTHONPATH=$PYTHONPATH:$PWD
+                                  #export PYTHONPATH=$PYTHONPATH:$PWD
 
                                   export PATH=${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$PATH && ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}} 
                                   
