--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -42,7 +42,6 @@ jobs:
                                   sudo apt-get install systemd              
                                   sudo cp ./scripts/environment_setup/xvfb.service /etc/systemd/system/xvfb.service
                                   sudo systemctl start xvfb
-                                  echo "export DISPLAY=:99.0" > ~/.bashrc
                                   echo "export PYTHONPATH=$PYTHONPATH:$PWD" > ~/.bashrc
                                                
                                   ./scripts/travis_ci/pull_git_submodules.sh
@@ -55,7 +54,7 @@ jobs:
                                   # Import the DISPLAY variable
                                   source ~/.bashrc
                                                                                                            
-                                  #export DISPLAY=:99.0 
+                                  export DISPLAY=:99.0 
                                   
                                   # Set the Python path to the current directory
                                   #export PYTHONPATH=$PYTHONPATH:$PWD
