--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -43,8 +43,6 @@ jobs:
                                   sudo cp ./scripts/environment_setup/xvfb.service /etc/systemd/system/xvfb.service
                                   sudo systemctl start xvfb
                                   echo "export PYTHONPATH=$PYTHONPATH:$PWD" > ~/.bashrc
-                                  echo "export DISPLAY=:99.0" > ~/.bashrc
-
                                                
                                   ./scripts/travis_ci/pull_git_submodules.sh
                                   pip install pipenv
@@ -54,9 +52,9 @@ jobs:
                         - name: Script
                           run: |     
                                   # Import the DISPLAY variable
-                                  source ~/.bashrc
+                                  #source ~/.bashrc
                                                                                                            
-                                  #export DISPLAY=:99.0 
+                                  export DISPLAY=:99.0 
                                   
                                   # Set the Python path to the current directory
                                   #export PYTHONPATH=$PYTHONPATH:$PWD
