--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow that is manually triggered
 
 name: UBC Formula Electric CI
-on: [pull_request]
+on: [push,pull_request]
 
 jobs:
         Firmware_Tests:
